# agentgit-workflow-testbench

./: .dockerignore  .env  .env.example  .env.template  .gitignore  Dockerfile  README.md  agentgit-0.2.0a0-py3-none-any.whl  docker-compose.yml  main.py  pyproject.toml
data/: agentgit.db  wtb.db
docs/: WTB_ARCHITECTURE_DIAGRAMS.md
docs/Adapter_and_WTB-Storage/: INDEX.md
docs/EventBus_and_Audit_Session/: INDEX.md
docs/LangGraph/: INDEX.md
docs/Metting_Report/: INDEX.md
docs/Metting_Report/2025-1-10/: Implementation_Summary_2025_01_10.md
docs/Metting_Report/2025_12_27/: Design_Summary_2025_12_27.md
docs/Project_Init/: ARCHITECTURE_STRUCTURE.md  CONSOLIDATED_ISSUES.md  DATABASE_DESIGN.md  INDEX.md  PROGRESS_TRACKER.md  WORKFLOW_TEST_BENCH_ARCHITECTURE.md  WORKFLOW_TEST_BENCH_SUMMARY.md  WTB_CONSOLIDATED_ARCHITECTURE.md
docs/Ray/: INDEX.md
docs/external_api/: INDEX.md
docs/file_processing/: FILE_TRACKING_ARCHITECTURE_DECISION.md  INDEX.md  WTB_VS_STANDALONE_COMPARISON.md
docs/history/: INDEX.md
docs/thread_and_process/: INDEX.md
docs/venv_management/: INDEX.md
docs_archive/old_archive/: ARCHITECTURE_ISSUES.md  QUICK_START.md  new_issues.md
docs_archive/old_archive/1-28/: ARCHITECTURE_REVIEW_2026_01_28.md  ARCHITECTURE_STRUCTURE.md  ASYNC_ARCHITECTURE_PLAN.md  ASYNC_FILE_TRACKING_SUMMARY.md  FILE_TRACKING_ARCHITECTURE_DECISION.md  INTEGRATION_ARCHITECTURE_SUMMARY.md
docs_archive/old_archive/Adapter_and_WTB-Storage/: AGENTGIT_STATE_ADAPTER_DESIGN.md  ARCHITECTURE_FIX_DESIGN.md  INDEX.md  WTB_PERSISTENCE_DESIGN.md
docs_archive/old_archive/EventBus_and_Audit_Session/: INDEX.md  WTB_EVENTBUS_AUDIT_DESIGN.md
docs_archive/old_archive/LangGraph/: API_DEPLOYMENT.md  AUDIT_EVENT_SYSTEM.md  CHECKPOINT_GRANULARITY_DESIGN.md  DDD_VIOLATION_REVIEW.md  DOMAIN_CHECKPOINT_DESIGN.md  INDEX.md  LANGGRAPH_WTB_INTEGRATION_IMPLEMENTATION.md  PERSISTENCE.md  TIME_TRAVEL.md  WTB_INTEGRATION.md
docs_archive/old_archive/Project_Init/: DATABASE_DESIGN.md  INDEX.md  (+3 more)
examples/: __init__.py  ml_pipeline_workflow.py  ray_usage.py
examples/wtb_presentation/: README.md  __init__.py  env.local.example
file_processing/file_processing/: README.md  config.json  data.csv  use.py
infra_tests/: TEST_SUMMARY.md  __init__.py  test_agentgit_v2.py  test_file_processing.py
langextract_demo/: README.md  TROUBLESHOOTING.md  config.py  demoV2.py  demoV4_realtime.py  env.example.txt  main.py
src/: README.md  __init__.py  api.py  config.py  exceptions.py  grpc_server.py  grpc_servicer.py  main.py  models.py
src/db_service/: api.py  connection.py  db_test_simple.py  env_audit.py  env_repository.py  models.py  readme.md
src/grpc_generated/: env_manager_pb2.pyi
src/protos/: env_manager.proto
src/scripts/: generate_grpc.py
src/services/: README.md  __init__.py  dep_manager.py  env_manager.py  lock_manager.py  uv_executor.py
tests/: run_integration_tests.py  test_api.py
tests/grpc_test/: grpc_client.py
tests/helpers/: __init__.py  assertions.py  sync.py
tests/mocks/: domain_objects.py  services.py
tests/rest_test/: fake_uv.py  test_api.py  test_integration.py  test_real_uv_api.py
tests/test_api/: __init__.py  test_api_services_unit.py  test_api_transaction_consistency.py  test_external_control.py  test_external_control_integration.py  test_rest_integration.py  test_rest_models.py  test_workflow_submission_integration.py
tests/test_architecture/: __init__.py  test_acid_compliance.py  test_dry_compliance.py  test_node_boundary_consistency.py
tests/test_file_processing/: __init__.py  conftest.py  test_transaction_scenarios.py
tests/test_langgraph/: __init__.py  conftest.py  helpers.py
tests/test_outbox_transaction_consistency/: __init__.py  conftest.py  helpers.py  test_batch_parallel.py  test_branching_rollback.py  test_cross_system_acid.py  test_outbox_lifecycle.py  test_pause_resume.py  test_real_services_integration.py  test_update_operations.py
tests/test_sdk/: __init__.py  conftest.py  test_sdk_control_operations.py  test_sdk_file_tracking.py  test_sdk_full_integration.py  test_sdk_langgraph_integration.py  test_sdk_ray_integration.py  test_sdk_venv_integration.py  test_transaction_consistency.py
tests/test_v16_architecture/: __init__.py  test_batch_runner_parity.py  test_code_quality_fixes.py  test_controller_factory.py  test_execution_controller_fork.py  test_langgraph_adapter.py  test_outbox_lifecycle.py  test_string_ids.py
tests/test_workspace/: __init__.py  conftest.py  test_filesystem_workspace.py  test_full_integration.py  test_langgraph_workspace.py  test_parallel_integration.py  test_real_ray_workspace.py  test_venv_workspace.py
tests/test_wtb/: __init__.py  conftest.py  test_actor_lifecycle.py  test_architecture_consolidation.py  test_audit_repository.py  test_audit_trail.py  test_batch_runner.py  test_checkpoint_models.py  test_checkpoint_stores.py  test_cross_db_consistency.py  test_domain_models.py  test_e2e_file_tracking_basic.py  test_e2e_file_tracking_rollback_full.py  test_e2e_file_tracking_rollback_restore.py  test_e2e_file_tracking_rollback_state.py  test_environment_events.py  test_environment_providers.py  test_event_bus.py  test_execution_controller.py  test_factories.py  test_file_processing_domain.py  test_file_processing_integration.py  test_file_processing_repository.py  test_file_tracking.py  test_grpc_environment_provider_integration.py  test_integration.py  test_integrity.py  test_langgraph_audit_integration.py  test_langgraph_event_bridge.py  test_langgraph_time_travel.py  test_migration_integration.py  test_node_replacer.py  test_outbox.py  test_outbox_filetracker.py  test_parity_checker.py  test_ray_batch_runner.py  test_ray_e2e_integration.py  test_ray_event_integration.py  test_ray_filetracker_integration.py  test_ray_transaction_consistency.py  (+7 more)
wtb/: __init__.py  config.py
wtb/api/: __init__.py
wtb/application/: __init__.py  factories.py
wtb/domain/: __init__.py
wtb/infrastructure/: __init__.py
wtb/sdk/: __init__.py  test_bench.py  workflow_project.py
wtb/testing/: __init__.py  fixtures.py
(+217 files in other folders)
