[project]
name = "wtb"
version = "0.1.0"
description = "Workflow Test Bench (WTB) - SDK for workflow testing, debugging, and orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["workflow", "testing", "langgraph", "checkpoint", "debugging", "ray", "agentgit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "langgraph>=0.2.60",
    "langgraph-checkpoint>=2.0.10",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
ray = [
    "ray>=2.9.0",
    "dill>=0.3.7",
]
langgraph-sqlite = [
    "langgraph-checkpoint-sqlite>=2.0.5",
]
langgraph-postgres = [
    "langgraph-checkpoint-postgres>=2.0.15",
    "psycopg[binary]>=3.1.0",
]
llm = [
    "openai>=1.0.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
]
grpc = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]
venv = [
    "uv-venv-manager>=0.1.0",
]
observability = [
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "prometheus-client>=0.17.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-env>=1.1.0",
    "httpx>=0.26.0",
    "ray>=2.9.0",
    "dill>=0.3.7",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "langgraph-checkpoint-sqlite>=2.0.5",
    "openai>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]
all = [
    "wtb[ray,langgraph-sqlite,langgraph-postgres,llm,api,grpc,venv,observability]",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wtb*"]
exclude = ["examples*", "docs*", "tests*", "uv_venv_manager*"]

[tool.setuptools.package-data]
wtb = [
    "**/*.sql",
    "**/*.proto",
    "infrastructure/database/migrations/*.sql",
    "api/grpc/protos/*.proto",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pytest_env]
# Enable Ray integration tests
RAY_E2E_TESTS = "1"
RAY_INTEGRATION_TESTS = "1"

# [tool.uv.workspace]
# members = []
